syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname = "EntrustedDetails";
//Generated By BrewRobot:Fri Feb 24 16:03:42 CST 2017

message PBIFE_prdquery_getQueryEntrustedDetails{
	///ife/prdquery/getQueryEntrustedDetails.html
	message TcProductSeriesList{
		string id = 1;	 //,主键ID,String,不校验,是,
		string seriesName = 2;	 //,系列名称,String,不校验,是,
		string sellTotal = 3;	 //,发行总额度,String,不校验,是,
		string totalCost = 4;	 //,综合成本,String,不校验,是,百分比，保存实际值，展示时可能需要*100
		string accountFirm = 5;	 //,会计事务所,String,不校验,是,
		string accountFirmAmount = 6;	 //,会所收费,String,不校验,是,百分比，保存实际值，展示时可能需要*100
		string lawFirm = 7;	 //,律师事务所,String,不校验,是,
		string lawFirmAmount = 8;	 //,律所收费,String,不校验,是,百分比，保存实际值，展示时可能需要*100
		string rateOrg = 9;	 //,评级机构,String,不校验,是,
		string rateOrgAmount = 10;	 //,评级机构收费,String,不校验,是,数字
		string clientManager = 11;	 //,受托管理人,String,不校验,是,
		string clientManagerAmount = 12;	 //,受托管理收费,String,不校验,是,百分比，保存实际值，展示时可能需要*100
		string remark = 13;	 //,备注,String,不校验,是,
		string createUser = 14;	 //,创建人,String,不校验,是,
		string createTime = 15;	 //,创建时间,String,不校验,是,
		string updateUser = 16;	 //,修改人,String,不校验,是,
		string updateTime = 17;	 //,修改时间,String,不校验,是,
		string dictionarySubId = 18;	 //,DICTIONARY_SUB_ID,String,不校验,是,
		string chargingMethod = 19;	 //,CHARGING_METHOD,String,不校验,是,
		string settRate = 20;	 //,SETT_RATE,String,不校验,是,
		string afterProStart = 21;	 //,募集结束时间后N个工作日为起息日,String,不校验,是,
		string afterTradeStart = 22;	 //,起息日后N个工作日为交易开始时间,String,不校验,是,时分秒取募集结束时间，分+1，秒清零
		string entrustedReport = 23;	 //,ENTRUSTED_REPORT,String,不校验,是,
		string entrustedTime = 24;	 //,ENTRUSTED_TIME,String,不校验,是,
		string entrustedPath = 25;	 //,ENTRUSTED_PATH,String,不校验,是,
	}


	repeated TcProductSeriesList tcProductSeriesList = 1;


}

message Ret_PBIFE_prdquery_getQueryEntrustedDetails{
	///ife/prdquery/getQueryEntrustedDetails.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_prdquery_getQueryEntrustedDetails data=3;


}

message REQ_PBIFE_prdquery_getQueryEntrustedDetails{
	///ife/prdquery/getQueryEntrustedDetails.html

	string productCode = 1; //,产品编号,String,不校验,否,


}